--- a/pom.xml
+++ b/pom.xml
@@ -61,5 +61,18 @@
             <type>pom</type>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>3.2.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.17.0-rc1</version>
+        </dependency>
+
     </dependencies>
 </project>
